# McM-errands

./: .gitignore  poetry.lock.license  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
docs/: conf.py  index.rst  reqmgr.rst
mcm/: __init__.py  app.py  cmssw.py  db.py
mcm/api/: __init__.py  tickets.py
mcm/openapi/: mcm.yaml
tests/: __init__.py  test_cmssw.py  test_mcm.py
